# bbe_tracker

./: .gitignore  README.md  pyproject.toml
docs/: DEVELOPER.md  OPERATIONS.md
office_scripts/: README.md  run_assessment.ts
scripts/: make_template.py
src/bee_tracker/: config.py  errors.py  evidence_pack.py  run_queue.py  whatif.py
templates/: alert_email.html.j2  report.html.j2  validation_report.html.j2  workbook_template.xlsx
tests/: test_alerts_email.py  test_alerts_render.py  test_alerts_triggers.py  test_cli_calculate_score.py  test_cli_export_evidence_pack.py  test_cli_generate_report.py  test_cli_graph_backend.py  test_cli_send_alerts.py  test_cli_validate_data_graph.py  test_config.py  test_evidence_pack.py  test_gap_analysis.py  test_graph_auth.py  test_graph_client.py  test_graph_pagination.py  test_graph_retry.py  test_integration_end_to_end.py  test_integration_plan2.py  test_procurement_helper.py  test_rendering_dashboard.py  test_reporting_branding.py  test_reporting_pdf.py  test_reporting_template.py  test_run_queue.py  test_run_queue_daemon.py  test_run_queue_daemon_multi_entity.py  test_scoring_esd_pp.py  test_scoring_level.py  test_scoring_management_control.py  test_scoring_ownership.py  test_scoring_sed.py  test_scoring_skills_development.py  test_scoring_yes.py  test_validation_extended.py  test_validation_rules.py  test_whatif.py  test_workbook_backends.py  test_workbook_reader.py  test_workbook_schema.py  test_workbook_template.py  (+1 more)
tests/fixtures/: esd_pp_fixtures.py  management_control_fixtures.py  ownership_fixtures.py  sed_fixtures.py  (+5 more)
(+34 files in other folders)
